--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <tr> 
      <th colspan="6"> <font color="white" face="Helvetica" size="5"> <h1> Welcome to our website </h1> <br> 
        <strike>
-        <i><h2> @KUMAR_SONS_OFF</h2></i>
+        <i><h2> @.KUMAR_SONS_OFF</h2></i>
        </strike> </font> </th> 
     </tr> <!--Row3----> 
     <tr> 
