--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
   <title>Document</title> 
  </head> 
- <body background="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpej"> 
+ <body background="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"> 
   <hr>
   <table border="0" width="100%" height="700px"> 
    <tbody> 
