--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!doctype html>
 <html> 
  <head> 
   <title>Document</title> 
@@ -8,21 +9,21 @@
   <table border="0" width="100%" height="700px"> 
    <tbody> 
     <tr> 
-     <th> <font color="RED" face="Monoton">KUMAR_SONS_OFF.IN </font> </th> 
+     <th> <font color="RED" face="Monoton">Decent_Networks </font> </th> 
      <th></th> 
      <th></th> 
-     <th> <a href="https://telegram.me/kumar_sons_bot"> TELEGRAM </a> </th> 
+     <th> <a href="https://chat.whatsapp.com/L6yrVCkP0TH5qs3AkpzntA"> Whatsapp Group </a> </th> 
      <th> <a href="https://www.instagram.com/decent_mind_50/"> INSTAGRAM </a></th> 
-     <th> <a href="https://youtube.com/c/GWChorayt"> YOUTUBE </a></th> 
+     <th> <a href="https://youtube.com/c/GWChorayt"> youtubeE </a></th> 
     </tr> <!--Row2----> 
     <tr> 
      <th colspan="6"> <font color="white" face="Helvetica" size="5"> <h1> Welcome to our website </h1> <br> 
-       <strike>
-        <i><h2> @.KUMAR_SONS_OFF</h2></i>
+       
+        <i><h2> Decent_Networks</h2></i>
        </strike> </font> </th> 
     </tr> <!--Row3----> 
     <tr> 
-     <th colspan="6"> <font size="5" color="orange" face="Aquire"> Subscribe Now </font> </th> 
+     <th colspan="6"> <font size="5" color="Yellow" face="Aquire"> Subscribe Now </font> </th> 
     </tr> <!--Row4----> 
     <tr>
       🏿 
@@ -34,7 +35,7 @@
      <th></th> 
     </tr> <!--Row5----> 
     <tr> 
-     <th colspan="6"> <font color="black"> Thanks for visiting </font> </th> 
+     <th colspan="6"> <font color="White"> Thanks for visiting </font> </th> 
     </tr> <!--Row6----> 
     <tr> 
      <th></th> 
